--- a/template/base.html
+++ b/template/base.html
@@ -67,7 +67,7 @@
                     {{user.first_name}}
                   </button>
                   <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Add job</a>
+                    <a class="dropdown-item" href="{% url 'jobs:create_job'%}">Add job</a>
                     <a class="dropdown-item" href="#">my jobs</a>
                     {% if user.get_profile_id%}
                     <a class="dropdown-item" href="{%url 'users:update_profile' pk=user.get_profile_id%}">update profile</a>
