--- a/template/jobs/category-detail.html
+++ b/template/jobs/category-detail.html
@@ -172,15 +172,15 @@
     	<div class="container">
     		<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
-          	<span class="subheading">Categories work wating for you</span>
-            <h2 class="mb-4"><span>Current</span> Job Posts</h2>
+          	<span class="subheading">Results for {{ category.title }}</span>
+            <h2 class="mb-4"><span>Current</span> Jobs for  {{ category.title }}</h2>
           </div>
         </div>
         <div class="row">
             {% for category in categories %}
         	<div class="col-md-3 ftco-animate">
         		<ul class="category">
-        			<li><a href="{% url 'jobs:category_detail' category.slug category.pk %}">{{ category.title }} <span class="number" data-number="{{ category.job_count }}">0</span></a></li>
+        			<li><a href="">{{ category.title }} <span class="number" data-number="{{ category.job_count }}">0</span></a></li>
 
         		</ul>
         	</div>
